@@ -2,13 +2,14 @@
 # CHANGES - change log  of OTRS
 # Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.209.2.30 2006-02-01 09:52:22 martin Exp $
+# $Id: CHANGES,v 1.209.2.31 2006-02-01 10:43:36 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 2.0.5 (2006/??/??)
+ - (2006/02/01) fixed missing translation after new ticket was created
  - (2006/02/01) added long month translation for calendar popup
  - (2006/01/30) added <OTRS_TICKET_*> and <OTRS_CONFIG_*> support to
     auto respons templates
